--- a/1.html
+++ b/1.html
@@ -34,9 +34,9 @@
   <li>JavaScript</li>
 </dl>
 
-<h1>취중고백 가사</h1> <!-- h1은 태   그이다 -->
-이 맘 모르겠니? 요즘 난 미친 사람처럼 너만 생각해 대책없이 네가 점점 좋아져
-아냐 안 취했어, <strong>진짜야 널 정말 <u>사랑해</u></strong> 진심이야, 믿어줘
+<h1>이대현의 웹사이트</h1> <!-- h1은 태   그이다 -->
+만든 목적<br>
+코딩을 <strong>연습하기</strong> 위해서이다.
 
 <!-- <strong>어쩌구저쩌구</strong> 은 강조
 <u>어쩌구저쩌구</u> 는 밑줄표 -->
